# rtf-converter

./: .dockerignore  .env  .gitignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  build.sh  codecov.yml  release-please-config.json  skaffold.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bench.yml  coverage.yml  docker.yml  release.yml  tests_and_checks.yml
docker/: Dockerfile  deployment.yaml
examples/: Cargo.toml
migrations/rtf-converter/: 20230717151815_uuid-plugin-activation.down.sql  20230717162112_create-templates-table.down.sql  20230717162112_create-templates-table.up.sql
rtf-converter/: Cargo.toml
rtf-converter-api/: Cargo.toml  README.md
rtf-converter-api/src/: main.rs
rtf-converter-api/src/extract/: json.rs
rtf-converter-api/src/middleware/: logging.rs
rtf-converter-api/src/models/: file.rs
rtf-converter-api/src/repositories/: file.rs
rtf-converter-api/src/routes/: mod.rs  template.rs
rtf-converter-api/src/rtf/: control.rs  mod.rs
rtf-converter-api/src/test_utils/: rvg.rs
rtf-converter-benches/: Cargo.toml
rtf-converter-benches/benches/: a_benchmark.rs
rtf-converter-wasm/: Cargo.toml  README.md
rtf-converter-wasm/src/: lib.rs
rtf-converter-wasm/tests/: web.rs
rtf-converter/docs/specs/: latest.json
rtf-converter/src/: docs.rs  lib.rs  main.rs  router.rs  settings.rs
rtf-converter/src/infra/db/postgres/: mod.rs
rtf-converter/src/middleware/: reqwest_retry.rs
rtf-converter/src/models/: file.rs
rtf-converter/src/persistence/: file.rs
rtf-converter/src/repositories/: file.rs  mod.rs
rtf-converter/src/routes/: convert.rs  health.rs  mod.rs  template.rs
rtf-converter/src/rtf/: control.rs  mod.rs  to_text.rs
rtf-converter/src/tracing_layers/: format_layer.rs
rtf-converter/tests/: integration_test.rs
