[package]
name = "rtf-converter-benches"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Christian KLAT <christian.klat@gmail.com>"]

[dependencies]
rtf-converter = { path = "../rtf-converter", version = "0.1", features = ["test_utils"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "a_benchmark"
harness = false
